<resources>
    <string name="app_name">Game</string>
    <string name="btn_start">Játék</string>
    <string name="btn_option">Beállítások</string>
    <string name="title_activity_option">Options</string>
    <string name="rb_easy">Easy</string>
    <string name="rb_medium">Medium</string>
    <string name="rb_hard">Hard</string>
    <string name="tv_difficulty">Difficulty</string>
    <string name="tv_content">Get content from radio buttons</string>
    <string name="save">Save</string>
    <string name="btn_Sub">Feliratkozás</string>

    <string name="sub_hint">Név</string>
    <string name="sub_hint_email">Email cím</string>
    <string name="sub_ok">Feliratkozás!</string>

    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>

    <string name="popup">Vesztettél</string>
    <string name="btn_menu">Menü</string>

    <string name="popWin">Nyertél!</string>

    <string name="tvKerdes">Írd a kérdésed ide</string>
    <string name="tvA">A válasz</string>
    <string name="tvB">B válasz</string>
    <string name="tvC">C válasz</string>
    <string name="tvD">D válasz</string>
    <string name="btnHozzaad">Hozzáad</string>

    <string name="btnUjKerdes">Új Kérdés</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="btnNext">Next</string>
</resources>
